# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yml  production.yml
migrations/: 20220522084542_seed_user.sql  20220524112151_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
