[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.15"
claim = "0.5"
config = "0.11"
fake = "~2.3"
once_cell = "1.10.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = { version =  "0.11.10", features = ["json"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde-aux = "3"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14"
linkify = "0.8"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0.31"
anyhow = "1.0.57"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
serde_json = "1"
tokio = {version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
