[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.6.2", features = ["redis-rs-tls-session"] }
actix-web = "4.0.1"
actix-web-flash-messages = { version = "0.3.2", features = ["cookies"] }
anyhow = "1.0.57"
argon2 = { version = "0.4.0", features = ["std"] }
base64 = "0.13.0"
chrono = "0.4.15"
claim = "0.5"
config = "0.11"
fake = "~2.3"
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
htmlescape = "0.3.1"
linkify = "0.8"
once_cell = "1.10.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde-aux = "3"
serde_json = "1"
sha2 = "0.10.2"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2.1.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
validator = "0.14"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version =  "0.11.10"
default-features = false
features = ["json", "rustls-tls", "cookies"] 

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
